src/objects/UserForecast__c.object
<CustomObject>
    <description>Custom object looks up to User record and has fields for YTDSales and YTDTarget that had formerly been on the User object.</description>
    <fields>
        <fullName>User_Id_Unique__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the selected User Id on creation of a User Forecast by a Workflow rule, and it has a requirement of uniqueness, so an attempt to create a second User Forecast for the same User ID should result in an error and no duplicate User Forecast record.</description>
        <inlineHelpText>This field is populated with the selected User Id on creation of a User Forecast by a Workflow rule, and it has a requirement of uniqueness, so an attempt to create a second User Forecast for the same User ID should result in an error and no duplicate Use</inlineHelpText>
        <label>User Id Unique</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>YTDSales__c</fullName>
        <description>Year to date sales for the user territory from VISTA.</description>
        <inlineHelpText>Year to date sales for the user territory from VISTA.</inlineHelpText>
        <label>YTDSales</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTDTarget__c</fullName>
        <description>Year to date target set for the user.</description>
        <inlineHelpText>Year to date target set for the user.</inlineHelpText>
        <label>YTDTarget</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>User Forecast</label>
    <listViews>
        <fullName>All</fullName>
        <columns>User__c</columns>
        <columns>YTDSales__c</columns>
        <columns>YTDTarget__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>User Forecast Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Forecasts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>